fix: align

--- a/src/views/Home/home.module.css
+++ b/src/views/Home/home.module.css
@@ -24,6 +24,11 @@
   text-align: center;
 }
 
+.input input:focus {
+  outline: none;
+  box-shadow: none;
+}
+
 .button {
   margin: 8px;
   padding: 12px 24px;
@@ -31,6 +36,10 @@
   background-color: #f0f0f0;
   border: none;
   cursor: pointer;
+}
+
+.button:hover {
+  background-color: #e0e0e0;
 }
 
 .circle {
@@ -58,6 +67,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
+  padding-bottom: 24px;
   align-items: center;
 }
